syntax = "proto3";

package helloworld;

option java_multiple_files = true;
option java_package = "com.example.grpc.helloworld";
option java_outer_classname = "HelloWorldProto";

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply) {}
  
  // Sends a goodbye
  rpc SayGoodbye (GoodbyeRequest) returns (GoodbyeReply) {}
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greeting
message HelloReply {
  string message = 1;
}

// The request message for goodbye
message GoodbyeRequest {
  string name = 1;
  bool formal = 2;
}

// The response message for goodbye
message GoodbyeReply {
  string message = 1;
}
